# news-driven-sentiment-strategies

./: README.md  hello.py  pyproject.toml
src/news_sentiment/: analyzer.py  cli.py  config.py  fetcher.py
tests/: test_analyzer.py  test_fetcher.py
